--- a/_data/work.yml
+++ b/_data/work.yml
@@ -9,3 +9,7 @@
 - name: Krookie
   url: https://github.com/lab9k/Krookie
   image: images/Portfolio/Krookie.png
+
+- name: Fotografiekathy
+  url: https://fotografiekathy.be
+  image: images/Portfolio/Kathy.png
