--- a/_data/work.yml
+++ b/_data/work.yml
@@ -9,3 +9,7 @@
 - name: Fotografiekathy
   url: https://fotografiekathy.be
   image: images/Portfolio/Kathy.png
+
+- name: SmartHome
+  url: https://github.com/brendero/ReactsmartHome
+  image: images/Portfolio/smarthome.png
