--- a/_data/work.yml
+++ b/_data/work.yml
@@ -10,6 +10,18 @@
   url: https://fotografiekathy.be
   image: images/Portfolio/Kathy.png
 
+- name: sleepy
+  url: https://github.com/brendero/SleepyRepo
+  image: images/Portfolio/sleepy.png
+
 - name: SmartHome
   url: https://github.com/brendero/ReactsmartHome
   image: images/Portfolio/smarthome.png
+
+- name: WayKing
+  url: https://github.com/brendero/Bap-roadtrip
+  image: images/Portfolio/wayking.png
+
+- name: SafeLane
+  url: https://expo.io/@brendero/safelane
+  image: images/Portfolio/safelane.png
